Bug 177338 - Kopete not patched to use libv4l
Summary: Kopete not patched to use libv4l
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Audio/Video Plugin (other bugs)
Version First Reported In: 0.60.81
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-09 21:13 UTC by eli
Modified: 2009-04-04 04:49 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
initial quick-n-dirty libv4l support (3.92 KB, patch)
2009-03-05 23:54 UTC, Rex Dieter
Details
Final patch for review (6.05 KB, patch)
2009-03-09 15:56 UTC, Jaroslav Reznik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description eli 2008-12-09 21:13:13 UTC
Version:           0.60.81 (using Devel)
OS:                Linux
Installed from:    Compiled sources

Fedora 10 x86_64
kernel 2.6.27.5-117.fc10.x86_64
kde 4.18
kopete 0.60.81

Hi as you may be aware newer kernel drivers have built in support for a wider range webcams. The newer kernel uses libv4l to access the camera. If kopete is not patched then the application needs to be started with

LD_PRELOAD=/usr/lib64/libv4l/v4l1compat.so kopete -caption "%c" %u

Is there anyway to get the application patched so that my camera can run straight out of the box.

This is kinda useful when having kopete run at startup.
Comment 1 Hans de Goede 2008-12-09 21:40:34 UTC
Hi,

I'm the libv4l author and maintainer, for more info about libv4l see:
http://hansdegoede.livejournal.com/3636.html

This includes some simple instructions for how to patch applications to use
libv4l, and hopefully also explains why libv4l exists and should be used. Also
see the README and the API doc in the header files.

If you have any questions please let me know.

Comment 2 Moritz Moeller-Herrmann 2009-01-07 03:28:41 UTC
I can confirm that current KDE kopete (KDE-4.2b2) does not work with my Logitech webcam without this hack. Kopete should be patched to avoid this.
Comment 3 eli 2009-01-16 10:37:25 UTC
Problem persists in 4.1.96
Comment 4 eli 2009-01-30 06:25:15 UTC
Problem persists in 4.2
Comment 5 eli 2009-03-05 21:08:50 UTC
Seems to be OK in 4.2.1
Comment 6 Matt Rogers 2009-03-05 22:20:21 UTC
ok in 4.2.1. closing.
Comment 7 Rex Dieter 2009-03-05 23:54:07 UTC
fedora includes some hackish libv4l patches, not quite suitable for upstream inclusion yet.  Glad to hear they're working.

Attaching.
Comment 8 Rex Dieter 2009-03-05 23:54:47 UTC
Created attachment 31811 [details]
initial quick-n-dirty libv4l support
Comment 9 Matt Rogers 2009-03-06 04:30:06 UTC
can you post this to reviewboard? :)
Comment 10 Jaroslav Reznik 2009-03-06 08:49:16 UTC
Eli thanks for report, I didn't have chance to test it cause I don't have any v4l1 webcam. As it's Fedora only hack - libv4l1 is obligatory (required). I've already prepared better one with libv4l1 detection but it needs some more cleanup. I'll send it for review soon.
Comment 11 Jaroslav Reznik 2009-03-09 15:56:33 UTC
Created attachment 31950 [details]
Final patch for review

Ok, so this is final path for review, I'll send it to kopete-devel (I hope it's right place for Kopete's reviews).
Comment 12 Hans de Goede 2009-03-09 16:15:02 UTC
(In reply to comment #11)
> Created an attachment (id=31950) [details]
> Final patch for review
> 
> Ok, so this is final path for review, I'll send it to kopete-devel (I hope it's
> right place for Kopete's reviews).

Looks good to me.
Comment 13 Lamarque V. Souza 2009-03-21 21:51:28 UTC
Hi all, any news about when this patch will be applied to kopete? I am using kopete-4.2.1 and needed to apply the patch to make my webcam work. I also had to implement V4L2_CAP_STREAMING in my webcam's driver and add a configuration to make hal (and consequently solid) recognize the webcam as v4l2 capable. For anyone interested my wecam uses the zr364xx driver. I can send the patch and the hal configuration (a small xml file) if anyone is interested in testing my patch.
Comment 14 Hans de Goede 2009-03-22 10:01:53 UTC
If you have a patch for the kernel driver to enable mmap mode, please send it to:
video4linux-list@redhat.com
Comment 15 Lamarque V. Souza 2009-03-22 15:56:16 UTC
Ok, I will sent the patch to the list.
Comment 16 Lamarque V. Souza 2009-03-22 15:59:17 UTC
Oh, by the way, do you when the libv4l patch will be applied against Kopete? Yesterday I changed the kopdete-4.2.1.ebuild in my Gentoo system to apply the patch, it is working good so far. Now I just need to convince someone to implement video chat in Kopete's WLM plugin or do it myself :-)
Comment 17 Jaroslav Reznik 2009-03-22 16:24:51 UTC
It's already in trunk but there's v4l1 regression - v4l2_open doesn't behave same way as standard open. I have patch with fallback but it needs some more changes, I hope I'll commit it soon.
Comment 18 Lamarque V. Souza 2009-03-22 16:35:03 UTC
Thanks for the information.
Comment 19 eli 2009-04-03 08:27:47 UTC
Seems to work great in 4.2.2
Comment 20 Matt Rogers 2009-04-04 04:49:16 UTC
Done for KDE 4.3