adds optional libv4l support for better webcam support

BUG:177338
BUG:186080


svn path=/trunk/KDE/kdenetwork/kopete/; revision=938114